hero section complete and added html of about started

--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
     </div>    
     <div class="good1">
         <p class="good2"></p><h1 class="good">I’m Aniket Gangwar<br> A UX/UI Designer </h1>
-            <h4>I’m probably the most passionate designer you will ever get to work with. If you have a great project that needs some amazing skills.</h4></p>
+            <h4>I’m probably the most passionate designer you will ever get to work with. If you have a great project that needs some amazing skills.</h4>
     </div>
-
-
     
-   
+    <!-- end of hero section -->
+    
+    <div class="wrap1">
+        <img src="images/profile pic.png" class="wrap">
+    </div>    
+    <div class="good1">
+        <p class="good2"></p><h1 class="good">About Me! </h1>
+            <h4>I’m a UX/UI Designer . I’m currently doing Engineering from Ajay <br> Kumar Garg Engineering College in Electrical and Electronics <br> Engineering .</h4>
+    </div>
