--- a/index.html
+++ b/index.html
@@ -39,11 +39,30 @@
     </div>
     
     <!-- end of hero section -->
-    
-    <div class="wrap1">
-        <img src="images/profile pic.png" class="wrap">
+
+    <div class="wrap2">
+        <img src="images/profile pic.png" class="pic">
     </div>    
-    <div class="good1">
-        <p class="good2"></p><h1 class="good">About Me! </h1>
-            <h4>I’m a UX/UI Designer . I’m currently doing Engineering from Ajay <br> Kumar Garg Engineering College in Electrical and Electronics <br> Engineering .</h4>
+    <div class="About">
+        <p class="about2"></p><h1 class="about">About Me! </h1>
+            <h4 class="content">I’m a UX/UI Designer . I’m currently doing Engineering from Ajay <br> Kumar Garg Engineering College in Electrical and Electronics <br> Engineering .</h4>
     </div>
+
+    <div class="skill-content">
+        <h1>Skill</h1>
+        <p>I am the perfect person to hire when it <br> comes to a full fledged project. Whatever <br> your needs are, I can pretty much take on <br> any challenge.</p>
+            <h2 class="visual">Visual Design</h2>
+            <p>My experience at dribbble has helped me learn <br> to develop the eye for design. Colors,<br> typography, layout and the whole package.</p>
+            <h2 class="design">UI Design</h2>
+            <p>I started my design journey with UI design in <br> my 2nd semester days. Motion is something that <br> really fascinates me because of <br> the flexibility of story telling.</p>
+    </div>
+    <div class="wrapper">
+        <div class="contacts">
+            <h3>CONTACTS US</h3>
+            <img src="images/Git hub icon.svg" alt="">
+            <img src="images/Instagram icon.svg" alt="">
+            <img src="images/linkedin icon.svg" alt="">
+        </div>
+    </div>
+</body>
+</html>
